tests/snapshots/several_types/output.snap
---
source: tests/runner.rs
description: top-type-sizes
---
64 std::fmt::Formatter<'_> align=8
     16 buf
     16 width
     16 precision
      4 flags
      4 fill
      1 align
      7 <end padding>

56 std::fmt::rt::v1::Argument align=8
     48 format
      8 position

48 std::fmt::rt::v1::FormatSpec align=8
     16 precision
     16 width
      4 flags
      4 fill
      1 align
      7 <end padding>

48 std::fmt::Arguments<'_> align=8
     16 fmt
     16 pieces
     16 args

32 unwind::libunwind::_Unwind_Exception align=8
      8 exception_class
      8 exception_cleanup
     16 private

32 std::result::Result<std::string::String, std::env::VarError> align=8
      8 <discriminant>
     24 variant Ok, Err
